--- a/index.html
+++ b/index.html
@@ -73,57 +73,217 @@
 
 
 
-        <!-- ========== Hero Cover ========== mfp-arrow mfp-arrow-right mfp-prevent-close -->
+        <!-- ========== Hero Cover ========== -->
 
-        <div id="home" class="text-slider-hero">
-          <div class="bg-overlay">
-            <div class="text-slider">
+        <div id="home" class="fs-slider-hero">
+            <div class="fs-slider">
 
-              <!-- Slide 1 -->
-              <div class="hero-content-wrapper">
-                <div class="hero-content">
+                <!-- Slide 1 -->
+                <div class="fs-slider-item fs-slide-1">
+                    <div class="bg-overlay">
 
-                  <h1 class="hero-lead wow fadeInUp" data-wow-duration="2s">Create</h1>
-                  <h4 class="h-alt hero-subheading wow fadeIn" data-wow-delay=".5s" data-wow-duration="1.5s">Multipage &amp; Onepage HTML5 Templates</h4>
-                  <a href="#services" class="btn wow fadeIn" data-wow-delay=".7s" data-wow-duration="2s">Learn More</a>
+                        <!-- Hero Content -->
+                        <div class="hero-content-wrapper">
+                            <div class="hero-content">
 
-                </div>
-              </div><!-- / .hero-content-wrapper -->
+                                <h1 class="hero-lead wow fadeInUp" data-wow-duration="2s">Archimood</h1>
+                                <h4 class="h-alt hero-subheading wow fadeIn" data-wow-delay=".5s" data-wow-duration="1.5s">Belsőépítészet magánembereknek!</h4>
 
-              <!-- Slide 2 -->
-              <div class="hero-content-wrapper">
-                <div class="hero-content">
+                            </div>
+                        </div>
 
-                  <h1 class="hero-lead wow fadeInUp" data-wow-duration="2s">Inspire</h1>
-                  <h4 class="h-alt hero-subheading wow fadeIn" data-wow-delay=".5s" data-wow-duration="1.5s">Multipage &amp; Onepage HTML5 Templates</h4>
-                  <a href="#services" class="btn btn-light wow fadeIn" data-wow-delay=".7s" data-wow-duration="2s">Learn More</a>
+                    </div><!-- / .bg-overlay -->
+                </div><!-- / .fs-slide-1 -->
 
-                </div>
-              </div><!-- / .hero-content-wrapper -->
 
-              <!-- Slide 3 -->
-              <div class="hero-content-wrapper">
-                <div class="hero-content">
+                <!-- Slide 2 -->
+                <div class="fs-slider-item fs-slide-2">
+                    <div class="bg-overlay">
 
-                  <h1 class="hero-lead wow fadeInUp" data-wow-duration="2s">Love</h1>
-                  <h4 class="h-alt hero-subheading wow fadeIn" data-wow-delay=".5s" data-wow-duration="1.5s">Multipage &amp; Onepage HTML5 Templates</h4>
-                  <a href="#services" class="btn wow fadeIn" data-wow-delay=".7s" data-wow-duration="2s">Learn More</a>
+                        <!-- Hero Content -->
+                        <div class="hero-content-wrapper">
+                            <div class="hero-content">
 
-                </div>
-              </div><!-- / .hero-content-wrapper -->
+                                <h1 class="hero-lead">Archimood</h1>
+                                <h4 class="h-alt hero-subheading wow fadeInUp">Belsőépítészet befektetőknek!</h4>
 
-            </div><!-- / .text-slider -->
+                            </div>
+                        </div>
+
+                    </div><!-- / .bg-overlay -->
+                </div><!-- / .fs-slide-2 -->
+
+            </div><!-- / .fs-slider -->
 
             <!-- Scroller -->
             <a href="#services" class="scroller">
-              <span class="scroller-text">scroll down</span>
-              <span class="linea-basic-magic-mouse"></span>
+                <span class="scroller-text">scroll down</span>
+                <span class="linea-basic-magic-mouse"></span>
             </a>
 
-          </div><!-- / .bg-overlay -->
-        </div><!-- / .text-slider-hero -->
-    
+        </div><!-- / .fs-slider-hero -->
+        <section id="portfolio" class="container-fluid portfolio-layout portfolio-columns-fw">
+            <div class="row">
+                <header class="sec-heading">
+                    <h2>Kedvenc Projektjeink</h2>
+                    <span class="subheading">Lorem ipsum dolor sit amet consectetur adipisicing</span>
+                </header>
+            </div><!-- / .row -->
 
+            <!-- Filters -->
+            <div class="row">
+                <ul id="pfolio-filters" class="portfolio-filters">
+                    <li class="active"><a href="#" data-filter="*">All</a></li>
+                    <li><a href="#" data-filter=".webdesing">Konyha</a></li>
+                    <li><a href="#" data-filter=".print">Nappali</a></li>
+                    <li><a href="#" data-filter=".photo">Hálószoba</a></li>
+                    <li><a href="#" data-filter=".photo">Gyerekszoba</a></li>
+                    <li><a href="#" data-filter=".photo">Hotel</a></li>
+                    <li><a href="#" data-filter=".photo">Szalon</a></li>
+                    <li><a href="#" data-filter=".photo">Étterem</a></li>
+                    <li><a href="#" data-filter=".photo">Kávézó</a></li>
+                    <li><a href="#" data-filter=".photo">Óvoda</a></li>
+                    <li><a href="#" data-filter=".photo">Lakás</a></li>
+                    <li><a href="#" data-filter=".photo">Családi ház</a></li>
+                    <li><a href="#" data-filter=".photo">Nyaraló</a></li>
+                    <li><a href="#" data-filter=".photo">Egyéb projektek</a></li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="pfolio-items">
+                    <div class="grid-sizer"></div>
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/01/01.jpg" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/01/01.jpg" class="open-btn open-gallery g1"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/02/02.jpg" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/02/02.jpg" class="open-btn open-gallery g2"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/03/03.jpg" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/03/03.jpg" class="open-btn open-gallery g3"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/04/04.png" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/04/04.png" class="open-btn open-gallery g4"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/05/05.png" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/05/05.png" class="open-btn open-gallery g5"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/06/06.jpg" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/06/06.jpg" class="open-btn open-gallery g6"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/07/07.png" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/07/07.png" class="open-btn open-gallery g7"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/08/08.jpg" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/08/08.jpg" class="open-btn open-gallery g8"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                    <!-- Item -->
+                    <div class="col-md-4 portfolio-item print">
+                        <div class="p-wrapper hover-default">
+                            <img src="assets/images/portfolio/09/09.png" alt="Project Example">
+                            <div class="p-hover">
+                                <div class="p-content">
+                                    <h4>Project Name</h4>
+                                    <h6 class="subheading">Sub heading for the project</h6>
+                                </div>
+                            </div>
+                            <a href="assets/images/portfolio/09/09.png" class="open-btn open-gallery g9"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div><!-- / .portfolio-item -->
+
+                </div><!-- / #pfolio -->
+            </div><!-- / .row -->
+        </section><!-- / .portfolio-columns-fw -->
+
+        </section>
 
         <!-- ========== Scripts ========== -->
 
