--- a/index.html
+++ b/index.html
@@ -134,33 +134,25 @@
             <div class="row">
                 <ul id="pfolio-filters" class="portfolio-filters">
                     <li class="active"><a href="#" data-filter="*">All</a></li>
-                    <li><a href="#" data-filter=".webdesing">Konyha</a></li>
-                    <li><a href="#" data-filter=".print">Nappali</a></li>
-                    <li><a href="#" data-filter=".photo">Hálószoba</a></li>
-                    <li><a href="#" data-filter=".photo">Gyerekszoba</a></li>
-                    <li><a href="#" data-filter=".photo">Hotel</a></li>
-                    <li><a href="#" data-filter=".photo">Szalon</a></li>
-                    <li><a href="#" data-filter=".photo">Étterem</a></li>
-                    <li><a href="#" data-filter=".photo">Kávézó</a></li>
-                    <li><a href="#" data-filter=".photo">Óvoda</a></li>
-                    <li><a href="#" data-filter=".photo">Lakás</a></li>
-                    <li><a href="#" data-filter=".photo">Családi ház</a></li>
-                    <li><a href="#" data-filter=".photo">Nyaraló</a></li>
-                    <li><a href="#" data-filter=".photo">Egyéb projektek</a></li>
+                    <li><a href="#" data-filter=".hotel">Hotel</a></li>
+                    <li><a href="#" data-filter=".szalon">Szalon</a></li>
+                    <li><a href="#" data-filter=".lakas">Lakás</a></li>
+                    <li><a href="#" data-filter=".latvany">Látványterv</a></li>
+                    <li><a href="#" data-filter=".csaladihaz">Családi ház</a></li>
+                    <li><a href="#" data-filter=".egyeb">Egyéb projektek</a></li>
                 </ul>
             </div>
             <div class="row">
-                <div class="pfolio-items">
-                    <div class="grid-sizer"></div>
-
+                <div id="pfolio">
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item egyeb csaladihaz latvany">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/01/01.jpg" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Ausztria ingatlanfejlesztés</h4>
+                                    <h6>2015, Ausztria</h6>
+                                    <h6 class="subheading">Tervezők: Pogátsa József, Nicole Tsengwabeka, Kovács Mátyás</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/01/01.jpg" class="open-btn open-gallery g1"><i class="fa fa-expand"></i></a>
@@ -168,13 +160,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/02/02.jpg" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Csepeli Lakás</h4>
+                                    <h6 class="subheading">2018, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/02/02.jpg" class="open-btn open-gallery g2"><i class="fa fa-expand"></i></a>
@@ -182,13 +175,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item lakas egyeb">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/03/03.jpg" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Greenhome ingatlanfejlesztlés</h4>
+                                    <h6 class="subheading">201, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József, Nicole Tsengwabeka</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/03/03.jpg" class="open-btn open-gallery g3"><i class="fa fa-expand"></i></a>
@@ -196,13 +190,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item egyeb lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/04/04.png" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Gyerekszoba</h4>
+                                    <h6 class="subheading">2017, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/04/04.png" class="open-btn open-gallery g4"><i class="fa fa-expand"></i></a>
@@ -210,13 +205,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item hotel egyeb">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/05/05.png" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Hotel Chesscom</h4>
+                                    <h6 class="subheading">2016-2018, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József, Nicole Tsengwabeka</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/05/05.png" class="open-btn open-gallery g5"><i class="fa fa-expand"></i></a>
@@ -224,13 +220,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/06/06.jpg" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Kazinczy utca airbnb lakás</h4>
+                                    <h6 class="subheading">2017, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/06/06.jpg" class="open-btn open-gallery g6"><i class="fa fa-expand"></i></a>
@@ -238,13 +235,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/07/07.png" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Mester utca konyha</h4>
+                                    <h6 class="subheading">2016, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/07/07.png" class="open-btn open-gallery g7"><i class="fa fa-expand"></i></a>
@@ -252,13 +250,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item szalon">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/08/08.jpg" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Szalon</h4>
+                                    <h6 class="subheading">2017, Budaörs</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/08/08.jpg" class="open-btn open-gallery g8"><i class="fa fa-expand"></i></a>
@@ -266,13 +265,14 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item print">
+                    <div class="col-md-4 portfolio-item csaladihaz latvanytervezes">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/09/09.png" alt="Project Example">
                             <div class="p-hover">
                                 <div class="p-content">
-                                    <h4>Project Name</h4>
-                                    <h6 class="subheading">Sub heading for the project</h6>
+                                    <h4>Üröm családi ház</h4>
+                                    <h6 class="subheading">2018, Budapest</h6>
+                                    <h6 class="subheading">Tervező: Pogátsa József, Kovács Mátyás</h6>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/09/09.png" class="open-btn open-gallery g9"><i class="fa fa-expand"></i></a>
