add icons subpage

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
             </a>
 
         </div><!-- / .fs-slider-hero -->
+
+
         <section id="portfolio" class="container-fluid portfolio-layout portfolio-columns-fw">
             <div class="row">
                 <header class="sec-heading">
@@ -283,7 +285,47 @@
             </div><!-- / .row -->
         </section><!-- / .portfolio-columns-fw -->
 
-        </section>
+        <!-- ========== Services - Frame Icons ========== -->
+
+        <section id="services" class="container section ft-centered">
+
+            <header class="sec-heading">
+                <h2>What we do</h2>
+                <span class="subheading">Lorem ipsum dolor sit amet, consectetur</span>
+            </header>
+
+            <div class="row">
+
+                <!-- Item 1 -->
+                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
+                    <span class="et-tools"></span>
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                </div>
+
+                <!-- Item 2 -->
+                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
+                    <span class="et-desktop"></span>
+                    <h5>Development</h5>
+                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                </div>
+
+                <!-- Item 3 -->
+                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
+                    <span class="et-anchor"></span>
+                    <h5>Branding</h5>
+                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                </div>
+
+                <!-- Item 4 -->
+                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
+                    <span class="et-strategy"></span>
+                    <h5>Marketing</h5>
+                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                </div>
+
+            </div><!-- / .row -->
+        </section><!-- / .ft-frames -->
 
         <!-- ========== Scripts ========== -->
 
