align hero texts

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
               <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#home">Referenciáink<span class="sr-only"></span></a></li>
-              <li><a href="#home">Szolgáltatásaink<span class="sr-only"></span></a></li>
-              <li><a href="#home">Rólunk<span class="sr-only"></span></a></li>
-              <li><a href="#home">Kapcsolat<span class="sr-only"></span></a></li>
+              <li><a href="#portfolio">Referenciáink<span class="sr-only"></span></a></li>
+              <li><a href="#services">Szolgáltatásaink<span class="sr-only"></span></a></li>
+              <li><a href="#about">Rólunk<span class="sr-only"></span></a></li>
+              <li><a href="#contact">Kapcsolat<span class="sr-only"></span></a></li>
             </ul><!-- / .nav .navbar-nav -->
           </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
@@ -79,7 +79,7 @@
             <div class="fs-slider">
 
                 <!-- Slide 1 -->
-                <div class="fs-slider-item fs-slide-1">
+                <div class="fs-slider-item fs-slide-2">
                     <div class="bg-overlay">
 
                         <!-- Hero Content -->
@@ -116,13 +116,12 @@
             </div><!-- / .fs-slider -->
 
             <!-- Scroller -->
-            <a href="#services" class="scroller">
+            <a href="#portfolio" class="scroller">
                 <span class="scroller-text">scroll down</span>
                 <span class="linea-basic-magic-mouse"></span>
             </a>
 
         </div><!-- / .fs-slider-hero -->
-
 
         <section id="portfolio" class="container-fluid portfolio-layout portfolio-columns-fw">
             <div class="row">
@@ -155,6 +154,7 @@
                                     <h4>Ausztria ingatlanfejlesztés</h4>
                                     <h6>2015, Ausztria</h6>
                                     <h6 class="subheading">Tervezők: Pogátsa József, Nicole Tsengwabeka, Kovács Mátyás</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/01/01.jpg" class="open-btn open-gallery g1"><i class="fa fa-expand"></i></a>
@@ -170,6 +170,7 @@
                                     <h4>Csepeli Lakás</h4>
                                     <h6 class="subheading">2018, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/02/02.jpg" class="open-btn open-gallery g2"><i class="fa fa-expand"></i></a>
@@ -183,8 +184,9 @@
                             <div class="p-hover">
                                 <div class="p-content">
                                     <h4>Greenhome ingatlanfejlesztlés</h4>
-                                    <h6 class="subheading">201, Budapest</h6>
+                                    <h6 class="subheading">2016, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József, Nicole Tsengwabeka</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/03/03.jpg" class="open-btn open-gallery g3"><i class="fa fa-expand"></i></a>
@@ -200,6 +202,7 @@
                                     <h4>Gyerekszoba</h4>
                                     <h6 class="subheading">2017, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/04/04.png" class="open-btn open-gallery g4"><i class="fa fa-expand"></i></a>
@@ -215,6 +218,7 @@
                                     <h4>Hotel Chesscom</h4>
                                     <h6 class="subheading">2016-2018, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József, Nicole Tsengwabeka</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/05/05.png" class="open-btn open-gallery g5"><i class="fa fa-expand"></i></a>
@@ -230,6 +234,7 @@
                                     <h4>Kazinczy utca airbnb lakás</h4>
                                     <h6 class="subheading">2017, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/06/06.jpg" class="open-btn open-gallery g6"><i class="fa fa-expand"></i></a>
@@ -245,6 +250,7 @@
                                     <h4>Mester utca konyha</h4>
                                     <h6 class="subheading">2016, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/07/07.png" class="open-btn open-gallery g7"><i class="fa fa-expand"></i></a>
@@ -260,6 +266,7 @@
                                     <h4>Szalon</h4>
                                     <h6 class="subheading">2017, Budaörs</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/08/08.jpg" class="open-btn open-gallery g8"><i class="fa fa-expand"></i></a>
@@ -275,6 +282,7 @@
                                     <h4>Üröm családi ház</h4>
                                     <h6 class="subheading">2018, Budapest</h6>
                                     <h6 class="subheading">Tervező: Pogátsa József, Kovács Mátyás</h6>
+                                    <a href="" class="linea-arrows-slim-right href-arrow"></a>
                                 </div>
                             </div>
                             <a href="assets/images/portfolio/09/09.png" class="open-btn open-gallery g9"><i class="fa fa-expand"></i></a>
@@ -286,46 +294,142 @@
         </section><!-- / .portfolio-columns-fw -->
 
         <!-- ========== Services - Frame Icons ========== -->
+        <div class="gray-bg">
+            <section id="services" class="container section ft-centered">
 
-        <section id="services" class="container section ft-centered">
+                <header class="sec-heading">
+                    <h2>What we do</h2>
+                    <span class="subheading">Lorem ipsum dolor sit amet, consectetur</span>
+                </header>
 
-            <header class="sec-heading">
-                <h2>What we do</h2>
-                <span class="subheading">Lorem ipsum dolor sit amet, consectetur</span>
-            </header>
+                <div class="row">
 
-            <div class="row">
+                    <!-- Item 1 -->
+                    <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
+                        <span class="et-lightbulb"></span>
+                        <h5>Tanácsadás</h5>
+                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                    </div>
 
-                <!-- Item 1 -->
-                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
-                    <span class="et-tools"></span>
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                </div>
+                    <!-- Item 2 -->
+                    <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
+                        <span class="et-circle-compass"></span>
+                        <h5>Belsőépítészeti tervezés</h5>
+                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                    </div>
 
-                <!-- Item 2 -->
-                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
-                    <span class="et-desktop"></span>
-                    <h5>Development</h5>
-                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                </div>
+                    <!-- Item 3 -->
+                    <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
+                        <span class="et-pictures"></span>
+                        <h5>Látványterv készítés</h5>
+                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                    </div>
 
-                <!-- Item 3 -->
-                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
-                    <span class="et-anchor"></span>
-                    <h5>Branding</h5>
-                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                </div>
+                    <!-- Item 4 -->
+                    <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
+                        <span class="et-presentation"></span>
+                        <h5>Projektmenedzsment</h5>
+                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                    </div>
 
-                <!-- Item 4 -->
-                <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
-                    <span class="et-strategy"></span>
-                    <h5>Marketing</h5>
-                    <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
+                </div><!-- / .row -->
+            </section><!-- / .ft-frames -->
+        </div>
+        <!-- ========== About - Freelancer Layout ========== -->
+
+        <section id="about" class="container freelancer-about">
+            <div class="row section">
+
+                <!-- Freelancer -->
+                <div class="col-lg-offset-2 col-lg-4 col-md-6 mb-sm-50 img-wrapper">
+                    <div class="t-item">
+
+                        <!-- Image -->
+                        <div class="t-image">
+                            <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                        </div>
+
+                        <!-- Info -->
+                        <div class="t-info">
+                            <h4 class="t-name">Pogátsa József</h4>
+                            <span class="t-role">Belsőépítész</span>
+                            <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                            </ul>
+                        </div>
+
+                    </div><!-- / .t-item -->
+                </div><!-- / .col-md-4 -->
+
+                <div class="col-lg-4 freelancer-about-content">
+                    <h2 class="t1-heading">Rólam</h2>
+                    <p>Mennyire szuper, hogy idáig még velem tartottatok!</p>
+                    <img src="assets/images/signature.png" alt="J.Webb">
                 </div>
 
             </div><!-- / .row -->
-        </section><!-- / .ft-frames -->
+        </section><!-- / .container -->
+
+        <!-- ========== Footer Litle ========== -->
+        <div class="gray-bg">
+            <footer id="contact" class="footer-litle">
+                <!-- Contact Info -->
+                <address>
+                    <ul>
+                        <!-- Address -->
+                        <li>
+                            <span class="linea-basic-map adr-icon"></span>
+                            <div class="adr-group">
+                                <span class="adr-heading">Address</span>
+                                <span class="adr-info">100 Street, Il, Us</span>
+                            </div>
+                        </li>
+
+                        <!-- Email -->
+                        <li>
+                            <span class="linea-basic-paperplane adr-icon"></span>
+                            <div class="adr-group">
+                                <span class="adr-heading">Email</span>
+                                <span class="adr-info">sayhello@email.com</span>
+                            </div>
+                        </li>
+
+                        <!-- Phone -->
+                        <li>
+                            <span class="linea-basic-smartphone adr-icon"></span>
+                            <div class="adr-group">
+                                <span class="adr-heading">Phone</span>
+                                <span class="adr-info">+ 123 4567 890</span>
+                            </div>
+                        </li>
+                    </ul>
+                </address>
+
+                <!-- Copyright -->
+                <div class="copyright">
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-sm-6">
+                                <small>&copy; 2018 Archimood. Made by <a class="no-style-link" href="http://z-poc.hu" target="_blank">Z-Poc</a></small>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <small><a href="#page-top" class="pull-right to-the-top">To The Top<i class="fa fa-angle-up"></i></a></small>
+                            </div>
+
+                        </div><!-- / .row -->
+                    </div><!-- / .container -->
+                </div><!-- / .copyright -->
+            </footer><!-- / .footer-litle -->
+        </div>
 
         <!-- ========== Scripts ========== -->
 
