First round modifications

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
                     <!-- Item 2 -->
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
-                        <span class="et-circle-compass"></span>
+                        <span class="et-tools"></span>
                         <h5>Belsőépítészeti tervezés</h5>
                         <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
                         <a href="" class="linea-arrows-slim-right href-arrow"></a>
@@ -359,9 +359,7 @@
                             <span class="t-role">Belsőépítész</span>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="https://www.instagram.com/pogatsajozsef/"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
 
@@ -383,21 +381,12 @@
                 <!-- Contact Info -->
                 <address>
                     <ul>
-                        <!-- Address -->
-                        <li>
-                            <span class="linea-basic-map adr-icon"></span>
-                            <div class="adr-group">
-                                <span class="adr-heading">Address</span>
-                                <span class="adr-info">100 Street, Il, Us</span>
-                            </div>
-                        </li>
-
                         <!-- Email -->
                         <li>
                             <span class="linea-basic-paperplane adr-icon"></span>
                             <div class="adr-group">
-                                <span class="adr-heading">Email</span>
-                                <span class="adr-info">sayhello@email.com</span>
+                                <span class="adr-heading">E-mail cím</span>
+                                <span class="adr-info">pogatsajozsef@gmail.com</span>
                             </div>
                         </li>
 
@@ -405,8 +394,8 @@
                         <li>
                             <span class="linea-basic-smartphone adr-icon"></span>
                             <div class="adr-group">
-                                <span class="adr-heading">Phone</span>
-                                <span class="adr-info">+ 123 4567 890</span>
+                                <span class="adr-heading">Telefonszám</span>
+                                <span class="adr-info">+36 70 338 79 66</span>
                             </div>
                         </li>
                     </ul>
