--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Definity - Main Demo Onepage</title>
+        <title>Archimood</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -62,8 +62,8 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#portfolio">Referenciáink<span class="sr-only"></span></a></li>
+              <li><a href="#home">Kezdőlap<span class="sr-only"></span></a></li>
+              <li><a href="#portfolio">Referenciák<span class="sr-only"></span></a></li>
               <li><a href="#services">Szolgáltatásaink<span class="sr-only"></span></a></li>
               <li><a href="#about">Rólunk<span class="sr-only"></span></a></li>
               <li><a href="#contact">Kapcsolat<span class="sr-only"></span></a></li>
@@ -126,8 +126,8 @@
         <section id="portfolio" class="container-fluid portfolio-layout portfolio-columns-fw">
             <div class="row">
                 <header class="sec-heading">
-                    <h2>Kedvenc Projektjeink</h2>
-                    <span class="subheading">Lorem ipsum dolor sit amet consectetur adipisicing</span>
+                    <h2>Referenciák</h2>
+                    <span class="subheading">NÉZD MEG KEDVENC PROJEKTJEINKET!</span>
                 </header>
             </div><!-- / .row -->
 
@@ -298,8 +298,8 @@
             <section id="services" class="container section ft-centered">
 
                 <header class="sec-heading">
-                    <h2>What we do</h2>
-                    <span class="subheading">Lorem ipsum dolor sit amet, consectetur</span>
+                    <h2>Szolgáltatásaink</h2>
+                    <span class="subheading">Ha építkezés, felújítás, átalakítás, ingatlan/helyiség bérbeadás, eladás vagy vétel előtt állsz, mindenképpen keress meg! Rengeteg pénzt és bosszúságot kereshetek vagy spórolhatok meg neked! </span>
                 </header>
 
                 <div class="row">
@@ -308,44 +308,45 @@
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
                         <span class="et-lightbulb"></span>
                         <h5>Tanácsadás</h5>
-                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                        <p>Kisebb belsőépítészeti, lakberendezési kérdések megbeszélése, elképzelésid, terveid véleményezése, iránymutatás.</p>
                     </div>
 
                     <!-- Item 2 -->
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
                         <span class="et-tools"></span>
                         <h5>Belsőépítészeti tervezés</h5>
-                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                        <p>Részletes koncepció és kiviteli terv elkészítése, amely minden szükséges információt tartalmaz az ügyfél és kivitelező számára egyaránt.</p>
                     </div>
 
                     <!-- Item 3 -->
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
                         <span class="et-pictures"></span>
                         <h5>Látványterv készítés</h5>
-                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                        <p>Külső és belső színes 3D látványtervek készítése, melyek segítségével vizuálisan segítik az elképzelések, tervek megjelenítését.</p>
                     </div>
 
                     <!-- Item 4 -->
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s" data-wow-delay=".3s">
                         <span class="et-presentation"></span>
                         <h5>Projektmenedzsment</h5>
-                        <p>Lorem ipsum dolor sit amet, ete elit consectetur adipisicing. Omnis quae, ipsam impedit eius, vero.</p>
-                        <a href="" class="linea-arrows-slim-right href-arrow"></a>
+                        <p>Aktív részvétel az elkészült tervek megvalósításának folyamatában. Művezetés, kapcsolattartás, ellenőrzés és tanácsadás.</p>
+                    </div>
+                    <div>
+                        <p></p>
+                        <a href="oldalak/tervezes_folyamata.html" class="linea-arrows-slim-right href-arrow text-center"></a>
                     </div>
 
                 </div><!-- / .row -->
             </section><!-- / .ft-frames -->
         </div>
+
         <!-- ========== About - Freelancer Layout ========== -->
 
         <section id="about" class="container freelancer-about">
             <div class="row section">
 
                 <!-- Freelancer -->
-                <div class="col-lg-offset-2 col-lg-4 col-md-6 mb-sm-50 img-wrapper">
+                <div class="col-lg-offset-2 col-lg-4 col-md-6 mb-sm-50 img-wrapper sticky_content">
                     <div class="t-item">
 
                         <!-- Image -->
@@ -368,8 +369,14 @@
 
                 <div class="col-lg-4 freelancer-about-content">
                     <h2 class="t1-heading">Rólam</h2>
-                    <p>Mennyire szuper, hogy idáig még velem tartottatok!</p>
-                    <img src="assets/images/signature.png" alt="J.Webb">
+                    <p>Pogátsa József vagyok. Belsőépítész. Sokan azt gondolják, hogy „csak” lakásokat rendezek be, gyakran kevernek össze a lakberendezőkkel. A tudásom és a tapasztalatom ennél azonban jóval szélesebb körű.
+
+                        Belsőépítészként én nem csak a helyiségek adottságait használom, de alakítom azokat. Ha szükséges falakat mozgatok, tereket helyezek át, funkciókat cserélek fel, majd ezeket megtöltöm tartalommal, színekkel, anyagokkal, dekorációval, fénnyel, minden olyan elemmel, amitől egy ház otthonná válik. Persze nem csak otthonokat teremtek, ugyanezt teszem egy étterem, kávézó, múzeum, üzlet vagy szálloda esetében is, a különbség a megrendelői igény, funkció, célcsoport, lépték, és természetesen a felhasznált anyagok között van.
+
+                        A munkám szerteágazó ismeretet követel, szükséges a naprakész építészeti alapismeret, bútor tervezéshez némi faipari ismeret, naprakész rálátás a hazai is nemzetközi design trendekre, termékekre. Azt is tudnom kell, hogy ezeket a termékeket, honnan és mennyiért lehet beszerezni, a szaniterektől a lámpákon, tapétákon át a kanapékig. Tudnom kell alkalmazni a szakági tervezők (gépész, statikus, elektromos tervező, grafikus, web szerkesztő, stb.) tudását, hisz adott esetben nekem kell összefognom az ő munkájukat is, hasonlóan az építészhez.
+
+                        És mi tesz különlegessé? A biztos stílusérzékem, a legkülönbözőbb stílusirányokban való jártasságom, csipetnyi pszichológiai és remek kommunikációs készségem, valamint, hogy minden munkáim során az ügyfél az első. A végeredményt mindig együtt alakítjuk. Az ügyfeleim, ti tesztek engem különlegessé, miattatok vagyok képes folyamatosan megújulni.
+                    </p>
                 </div>
 
             </div><!-- / .row -->
